# Carcassonne

./: .gitignore  CMakeLists.txt
include/ai/: GameStateSnapshot.h  HeuristicEvaulator.h  IEvaluator.h
include/common/: Debug.h  Direction.h  Position.h  Segments.h  TerminalColor.h
include/core/: Board.h  GameState.h  MoveGenerator.h  PlacementValidator.h  RegionManager.h  ScoreCalculator.h  Segments.h  Tile.h  TypedRegion.h
include/game/: Deck.h  Game.h  Player.h
include/graph/: Graph.h  GraphAlgorithms.h  UnionFind.h
include/meeple/: Meeple.h  MeepleType.h
include/render/: Render.h
include/tiles/: Tile.h  TileData.h  TileFactory.h  TilePosition.h  TileType.h
src/: main.cpp
src/ai/: CMakeLists.txt  GameStateSnapshot.cpp  HeuristicEvaluator.cpp
src/core/: Board.cpp  CMakeLists.txt  GameState.cpp  MoveGenerator.cpp  PlacementValidator.cpp  RegionManager.cpp  ScoreCalculator.cpp  Tile.cpp  TypedRegion.cpp
src/game/: CMakeLists.txt  Deck.cpp  Game.cpp  Player.cpp
src/graph/: CMakeLists.txt  Graph.cpp  GraphAlgorithms.cpp  UnionFind.cpp
src/meeple/: CMakeLists.txt  Meeple.cpp
src/render/: CmakeLists.txt  Render.cpp
src/tiles/: CMakeLists.txt  Tile.cpp  TileData.cpp  TileFactory.cpp
